cros: Disallow tablet mode when external mouse and keyboard attached.

Tablet mode will exit if both are attached during tablet mode. Bending
the lid in any degree will not trigger tablet mode while the external
devices are connected.

Tablet mode controller still tracks if we should be in tablet mode but
are blocked by the external keyboard and mouse, so that after unplugging
the devices, we will enter tablet mode, if necessary.

If the device was in tablet mode and rotated, plugging the external
devices will revert rotation to none and rely on user to use keyboard
to rotate. This behaviour is being discussed on bug, and will be
addressed in follow up cl.

Test: covered by tests
Bug: 811999
Change-Id: Ia3932f4850246fca80d39a3c7184eae601c77864
Reviewed-on: https://chromium-review.googlesource.com/1040777
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556528}
Former-commit-id: baf66f5ed73b197e44dea0e788a09f203bd20a54