services/ui/public/cpp/input_devices/input_device_client_test_api.h
@@ -37,6 +37,7 @@ class InputDeviceClientTestApi {
   void OnDeviceListsComplete();
 
   void SetKeyboardDevices(const std::vector<InputDevice>& devices);
+  void SetMouseDevices(const std::vector<InputDevice>& devices);
 
   // |are_touchscreen_target_displays_valid| is only applicable to
   // InputDeviceClient. See
